<resources>
    <string name="app_name">AppLovinMediation</string>
    <string name="banner">Banner</string>
    <string name="medium_rect">Medium Rect</string>
    <string name="infeed">Infeed</string>
    <string name="interstitial">Interstitial</string>
    <string name="rewarded">Rewarded</string>
    <string name="show">Show</string>
    <string name="interscroller">Interscroller</string>
    <string name="inline">Inline</string>
</resources>