<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.applovinmediation.MainActivity">



        <FrameLayout
            android:id="@+id/reserved_for_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reserved_for_ad">

            <Button
                android:id="@+id/button_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banner"
                android:enabled="false"/>

            <Button
                android:id="@+id/button_medium_rect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium_rect"
                android:enabled="false"/>

            <Button
                android:id="@+id/button_infeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infeed"
                android:enabled="false"/>

            <Button
                android:id="@+id/button_interstitial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interstitial"
                android:enabled="false"/>
            <Button
                android:id="@+id/button_interscroller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interscroller"
                android:enabled="false"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>